--- a/totp/src/tailwind.css
+++ b/totp/src/tailwind.css
@@ -18,4 +18,8 @@
   .cta {
     @apply p-3 rounded-3xl duration-300 ease-in-out
   }
+
+  .token {
+    @apply border-red-500 border-2 rounded-2xl p-9 bg-gray-50 dark:bg-gray-900 shadow-lg shadow-red-500
+  }
 }
