--- a/totp/src/tailwind.css
+++ b/totp/src/tailwind.css
@@ -22,4 +22,8 @@
   .token {
     @apply border-red-500 border-2 rounded-2xl p-9 bg-gray-50 dark:bg-gray-900 shadow-lg shadow-red-500
   }
+
+  .button-uncta {
+    @apply bg-gray-100 hover:bg-gray-300 shadow-md shadow-gray-50
+  }
 }
