--- a/totp/src/tailwind.css
+++ b/totp/src/tailwind.css
@@ -20,10 +20,14 @@
   }
 
   .token {
-    @apply border-red-500 border-2 rounded-2xl p-9 bg-gray-50 dark:bg-gray-900 shadow-lg shadow-red-500
+    @apply border-red-500 border-2 rounded-2xl px-9 bg-gray-50 dark:bg-gray-900 shadow-lg shadow-red-500 py-6
   }
 
   .button-uncta {
     @apply bg-gray-100 hover:bg-gray-300 shadow-md shadow-gray-50
+  }
+
+  .add-token {
+    @apply p-3 w-full rounded-3xl placeholder:text-gray-500 bg-gray-100 dark:text-gray-500
   }
 }
