--- a/totp/src/tailwind.css
+++ b/totp/src/tailwind.css
@@ -12,11 +12,11 @@
   }
 
   .preffered-color {
-    @apply text-black dark:text-white
+    @apply text-black dark:text-white;
   }
 
   .preffered-bg {
-    @apply w-full bg-white dark:bg-gray-700
+    @apply w-full bg-white dark:bg-gray-700;
   }
 
   .token_form_label {
@@ -27,15 +27,24 @@
     @apply text-black rounded-2xl shadow-md w-full p-3 placeholder:text-lg outline outline-red-600 outline-1;
   }
 
-  .token_form {
-    @apply p-3 grid grid-cols-1 gap-5;
-  }
-
   .token_form_button {
     @apply bg-red-600 w-1/5 h-10 rounded-2xl text-lg font-semibold text-white;
   }
 
-  .token_form_h2 {
-    @apply text-3xl font-semibold;
+  .display_handle_add_tokens {
+    @apply flex items-center p-2 h-14 border-t-2 shadow-md duration-200 ease-out cursor-pointer hover:bg-red-50 hover:ease-in 
+      dark:hover:bg-red-700;
+  }
+
+  .display_add_tokens_h1 {
+    @apply flex items-center h-24 text-4xl font-bold;
+  }
+
+  .display_add_tokens_p {
+    @apply pl-4 w-11/12 text-xl;
+  }
+
+  .handle_tokens_icon {
+    @apply text-red-600 dark:text-white hover:text-red-300 hover:dark:text-gray-300 duration-200 ease-out hover:ease-in;
   }
 }
