--- a/totp/src/tailwind.css
+++ b/totp/src/tailwind.css
@@ -20,7 +20,7 @@
   }
 
   .token_form_label {
-    @apply inline-block mb-3 text-lg;
+    @apply flex mb-3 text-lg;
   }
 
   .token_form_input {
@@ -32,8 +32,7 @@
   }
 
   .display_handle_add_tokens {
-    @apply flex items-center p-2 h-14 border-t-2 shadow-md duration-200 ease-out cursor-pointer hover:bg-red-50 hover:ease-in 
-      dark:hover:bg-red-700;
+    @apply flex items-center p-2 h-14 border-t-2 shadow-md duration-200 ease-out;
   }
 
   .display_add_tokens_h1 {
@@ -45,6 +44,14 @@
   }
 
   .handle_tokens_icon {
-    @apply text-red-600 dark:text-white hover:text-red-300 hover:dark:text-gray-300 duration-200 ease-out hover:ease-in;
+    @apply text-black dark:text-white hover:text-red-600 duration-200 ease-out hover:ease-in;
+  }
+
+  .token_form_p {
+    @apply text-red-500 text-lg;
+  }
+
+  .remove_token_button {
+    @apply w-auto h-12 rounded-xl text-white font-bold text-2xl hover:bg-green-500 duration-200 ease-in-out;
   }
 }
